syntax = "proto3";

package com.ecommerce.common;

option java_multiple_files = true;
option java_package = "com.ecommerce.proto.common";
option java_outer_classname = "CommonProto";

import "google/protobuf/timestamp.proto";

message Money {
  string amount = 1;

  string currency = 2;
}

message Metadata {
  google.protobuf.Timestamp timestamp = 1;

  string trace_id = 2;

  string correlation_id = 3;

  string service_name = 4;

  int32 version = 5;
}
